Fixed logo issue on mobile

--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -182,7 +182,7 @@ details {
 }
 
 .company-logo {
-  max-width: 300px;
+  max-width: 200px;
   margin: 20px;
 }
 
